--- a/Switch1.html
+++ b/Switch1.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Switch 1</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Materi Jaringan Komputer</h1>
+    <h3>Switch, Server, dan Router</h3>
+    <p>
+        Pengertian Jaringan Komputer
+    </p>
 </body>
 </html>
