--- a/Switch1.html
+++ b/Switch1.html
@@ -10,6 +10,7 @@
     <h3>Switch, Server, dan Router</h3>
     <p>
         Pengertian Jaringan Komputer
+        Jaringan Komputer
     </p>
 </body>
 </html>
